# duckietown-mplan2

./: .gitmodules  Makefile  README.md
.circleci/: config.yml
lib-mplan/: .bumpversion.cfg  .coveragerc  MANIFEST.in  Makefile  requirements.txt  setup.py
lib-mplan/src/duckietown_mplan/: __init__.py
lib-mplan/src/duckietown_mplan/algo/: __init__.py
lib-mplan/src/duckietown_mplan/algo/containers/: __init__.py  cost_grid.py  obstacle.py  trajectory.py
lib-mplan/src/duckietown_mplan/algo/manipulators/: __init__.py  cost_grid_populator.py  cost_grid_solver.py  map_manipulator.py
lib-mplan/src/duckietown_mplan/algo/viz_tools/: __init__.py  path_viz.py
lib-mplan/src/duckietown_mplan/algo/workers/: __init__.py  trajectory_creator.py  trajectory_sampler.py  worker_base.py
lib-mplan/src/duckietown_mplan_tests/: test2.py
mplan_msgs/: CMakeLists.txt  package.xml
mplan_msgs/msg/: Actor.msg  MovingObject.msg  Obstacles.msg  TimedPath.msg
ros-mplan/: CMakeLists.txt  package.xml  setup.py
ros-mplan/config/: default.rviz  mplan_objects.yaml  mplan_params.yaml
ros-mplan/config/demos/1/: 1.rviz  mplan_objects.yaml
ros-mplan/config/demos/2/: 2.rviz  mplan_objects.yaml
ros-mplan/config/demos/3/: 3.rviz  mplan_objects.yaml
ros-mplan/config/demos/4/: 4.rviz  mplan_objects.yaml
ros-mplan/config/demos/5/: 5.rviz  mplan_objects.yaml  mplan_params.yaml
ros-mplan/launch/: mplan_withviz.launch  mplan_withviz_demo.launch
ros-mplan/src/: duckiebot_teleop_node.py  fleet_planner_wrapper_node.py  path_viz_node.py  trajectory_creator_node.py  trajectory_sampler_node.py
setup/: setup_from_blank_folder.bash
